# MinSoftwareRenderer

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  occlusion.tga  occlusion_texture.tga
Assets/Textures/ice/: icyhell_dn.tga  icyhell_ft.tga  icyhell_img.tga  icyhell_lf.tga  icyhell_rt.tga
Assets/texture/ice/: icyhell_bk.tga  icyhell_up.tga
Include/: Camera.h  Globals.h  Math.h  Model.h  Shader.h  mathLib.h  mesh.h  renderer.h  scene.h  tgaimage.h  window.h
Source/: Math.cpp  Model.cpp  Shader.cpp  Source.cpp  main.cpp
cmake/: FindGLEW.cmake  Findglfw3.cmake
scenes/debug_scene/: scene_config.json
scenes/default_scene/: scene_config.json
scenes/dragon_scene/: scene_config.json
scenes/gun_scene/: scene_config.json
shaders/: shader.frag  shader.vert
src/: Math.cpp  Model.cpp  Shader.cpp  main.cpp  mathLib.cpp  mesh.cpp  renderer.cpp  scene.cpp  tgaimage.cpp  window.cpp
